--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,15 @@
   color: white;
 }
 body {
-  max-width: 1000px;
+  max-width: 1140px;
   height: 100vh;
   margin: 0 auto;
   background-color: #0d1014;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
-  padding: 2rem;
+  padding: 2rem 0.125rem;
 }
 
 body::-webkit-scrollbar {
@@ -28,7 +28,6 @@ body::-webkit-scrollbar {
 
 section {
   width: 100%;
-  height: 100vh;
   display: grid;
   grid-template-columns: repeat(3, 3fr);
   justify-items: center;
@@ -55,19 +54,17 @@ body > h1 {
   transition: 0.4s;
   text-align: center;
   color: aliceblue;
-  border: solid white;
+  border: solid aliceblue;
 }
 
 .card:nth-child(3):hover {
   box-shadow: rgba(255, 217, 0, 0.219) 0 0 100px;
 }
 .card:nth-child(2) {
-  /* border: solid rgb(0, 255, 0); */
   transform: scale(1.05);
 }
 
 .card:nth-child(2):hover {
-  /* border: solid rgb(0, 255, 0); */
   box-shadow: rgba(51, 255, 0, 0.219) 0 0 100px;
 }
 
@@ -76,18 +73,20 @@ body > h1 {
 }
 .card-header {
   display: grid;
-  gap: 0.4rem;
+  gap: 0.65rem;
 }
-.card-header h1 {
+.card-header h1.premium {
   font-weight: 600;
 }
 .card-header p {
   font-size: 0.85rem;
+  font-weight: 500;
 }
 .card-price {
   padding: 2rem 0;
   border-bottom: 1px solid rgb(160, 160, 160);
   width: 100%;
+  font-size: 1.4rem;
 }
 .card-features {
   display: flex;
@@ -104,7 +103,6 @@ body > h1 {
   text-align: initial;
   font-size: 0.88rem;
   line-height: 1.4;
-  font-weight: 500;
 }
 h4 {
   margin-top: 1rem;
@@ -118,9 +116,6 @@ img {
   section {
     grid-template-columns: 1fr;
     padding: 2rem;
-  }
-  .card-header p {
-    /* max-width: 200px; */
   }
 }
 #filter,
@@ -144,7 +139,9 @@ img {
   font-size: 0.8rem;
   padding: 1rem;
   border-radius: 0.5rem;
-  background-color: grey;
+  background-color: rgb(66, 66, 66);
+  box-shadow: 0 0 10px 8px black;
+  z-index: 11;
 }
 #filter::after {
   content: "Tavarlarni saralash: masalan faqat xiomi telefonlarini ko'rish yoki faqat samsung";
@@ -167,12 +164,13 @@ img {
   background: red;
   border: none;
   position: fixed;
-  left: 0;
+  top: 20%;
+  left: -4%;
   transform: rotate(90deg);
   padding: 10px 20px;
   border-radius: 5px;
   font-size: 20px;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
   cursor: pointer;
 }
 
@@ -180,7 +178,7 @@ img {
   box-shadow: rgba(255, 0, 0, 0.219) 0 0 100px;
 }
 
-.overlay{
+.overlay {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -193,13 +191,13 @@ img {
   color: black;
 }
 
-.hidden_card{
+.hidden_card {
   background-color: white;
   padding: 20px;
   border-radius: 5px;
 }
 
-.hidden_card > p{
+.hidden_card > p {
   font-size: 22px;
   color: black;
   font-weight: 700;
